[package]
name = "splay_tree"
version = "0.4.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Splay Tree based Data Structures (map, set, heap)"
homepage = "https://github.com/sile/splay_tree"
repository = "https://github.com/sile/splay_tree"
readme = "README.md"
categories = ["data-structures", "no-std"]
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1", optional = true,  default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
rand = "0.9"
serde_json = { version = "1" }

[features]
std = []
default = [ "std" ]
